--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1342,10 +1342,11 @@ crossorigin=""/>
   <br>
   Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. </p>
   <div class="col-12 text-center"><u>Attention cependant, le 49 th arrive prochainement</u>.</div>
-<p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
+  <br>
+  <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
 
 <div class="table-responsive-sm col-12" style="background-color: blue;">
-  <table class="col-10" style="padding-right: 15%;">
+  <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
    <thead class="thead-light">
         <tr>
