--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1345,10 +1345,10 @@ crossorigin=""/>
   <br>
   <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
 
-<div class="table-responsive-sm col-12" style="background-color: blue;">
+<div class="table-responsive-sm table-striped col-12">
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
-   <thead class="thead-light">
+   <thead class="thead-dark">
         <tr>
             <th>Catégories</th>
             <th>Produits Finis</th>
