--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1343,7 +1343,7 @@ crossorigin=""/>
   Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. </p>
   <div class="col-12 text-center"><u>Attention cependant, le 49 th arrive prochainement</u>.</div>
   <br>
-  <p>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </p>
+  <p><b>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </b></p>
 
 <div class="table-responsive-sm table-striped col-12">
   <table class="col-12 align-items-center" >
@@ -1398,12 +1398,15 @@ crossorigin=""/>
             <td><span></span>11</td>
             <td><span></span>Produits sans contact avec la peau (désodorisants, blocs pour toilette, insecticides, baton d'encens, objets en plastique, bougies, essence, peinture, cire pour le sol, produits pour lave-vaisselle, parfums de linge, sachets parfumants, cirage, litiaires, sprays pour animaux, soins textiles, eaux parfumantes pour repassage)</td> 
         </tr>
-</table></div>
+</table>
+</div>
+<br>
+    <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
+    <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
-<p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
-<p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
-<div class="table-responsive-sm"><table class="table">
-  
+
+<div class="table-responsive-sm table-striped col-12">
+  <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
             <th>Ingredient</th>
