--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1405,18 +1405,18 @@ crossorigin=""/>
     <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
 
-<div class="table-responsive-sm table-striped col-12">
+<div class="table-responsive-sm table-striped col-12" style="width:100%">
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
             <th>Ingredient</th>
-            <th class="">N° CAS</th>
+            <th>N° CAS</th>
             <th>Spécifications</th>
         </tr>
         <tr>
-            <td><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-            <td><span></span>88&#8209;29&#8209;9</td>
-            <td><span></span></td> 
+            <td width="30%"><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+            <td width="10%"><span></span>88&#8209;29&#8209;9</td>
+            <td width="60%"><span></span></td> 
         </tr>
         <tr>
             <td><span></span>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
