--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1409,9 +1409,9 @@ crossorigin=""/>
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
-            <th>Ingredient</th>
-            <th>N° CAS</th>
-            <th>Spécifications</th>
+            <th width="30%">Ingredient</th>
+            <th width="10%">N° CAS</th>
+            <th width="60%">Spécifications</th>
         </tr>
         <tr>
             <td width="30%"><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
