--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1340,10 +1340,10 @@ crossorigin=""/>
   <br>
   Les standards émis par l’association peuvent limiter ou interdire l’utilisation de certains ingrédients de parfums, et permettent aux fabricants d’émettre un <b>certificat IFRA</b>. Ce dernier permet au fabricant d’assurer à son client que son produit est conforme aux standards de l’industrie. 
   <br>
-  Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th amendement</b>. </p>
-  <div class="col-12 text-center"><u>Attention cependant, le 49 th arrive prochainement</u>.</div>
+  Depuis 2015, les standards à prendre en compte sont ceux du <b>48 th </b>amendement. </p>
+  <div class="col-12 text-center">Attention cependant, le 49 th arrive prochainement.</div>
   <br>
-  <p><b>Afin de vous fournir de plus amples informations sur la classification des produits finis dans les catégories ici, nous avons réunis les principaux produits dans ce tableau : </b></p>
+  <p>Afin de vous fournir de plus amples informations sur la <b>classification des produits finis dans les catégories </b>ici, nous avons réunis les principaux produits dans ce tableau : </p>
 
 <div class="table-responsive-sm table-striped col-12">
   <table class="col-12 align-items-center" >
@@ -1372,7 +1372,7 @@ crossorigin=""/>
         </tr>
         <tr>
             <td><span></span>5</td>
-            <td><span id=""></span>Crèmes pour les mains</td> 
+            <td><span></span>Crèmes pour les mains</td> 
         </tr>
         <tr>
             <td><span></span>6</td>
