--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1409,14 +1409,14 @@ crossorigin=""/>
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
-            <th style="width:30%">Ingredient</th>
-            <th style="width:10%">N° CAS</th>
-            <th style="width:60%">Spécifications</th>
+            <th>Ingredient</th>
+            <th>N° CAS</th>
+            <th>Spécifications</th>
         </tr>
         <tr>
-            <td width="30%"><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-            <td width="10%"><span></span>88&#8209;29&#8209;9</td>
-            <td width="60%"><span></span></td> 
+            <td style="width:40%"><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+            <td style="width:10%"><span></span>88&#8209;29&#8209;9</td>
+            <td style="width:50%">><span></span></td> 
         </tr>
         <tr>
             <td><span></span>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
