--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1416,7 +1416,7 @@ crossorigin=""/>
         <tr>
             <td style="width:40%"><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
             <td style="width:10%"><span></span>88&#8209;29&#8209;9</td>
-            <td style="width:50%">><span></span></td> 
+            <td style="width:50%"><span></span></td> 
         </tr>
         <tr>
             <td><span></span>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
