--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1430,9 +1430,9 @@ crossorigin=""/>
             <th>Spécifications</th>
         </tr>
         <tr>
-            <td><span></span>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-            <td><span></span>88&#8209;29&#8209;9</td>
-            <td><span></span></td> 
+            <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+            <td width="10%">88&#8209;29&#8209;9</td>
+            <td width="50%"></td> 
         </tr>
         <tr>
             <td><span></span>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
