--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1421,7 +1421,7 @@ crossorigin=""/>
   </tr>
 </table>
 
-<div class="table-responsive-sm table-striped col-12">
+<div class="table-striped col-12" style="width:100%">
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
