--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1411,13 +1411,14 @@ crossorigin=""/>
     <th>Savings</th>
   </tr>
   <tr>
-    <td width="40%">January</td>
-    <td width="10%">$100</td>
-    <td width="50%">$100</td>
+    <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+    <td width="10%">88&#8209;29&#8209;9</td>
+    <td width="50%"></td>
   </tr>
   <tr>
     <td>February</td>
     <td>$80</td>
+    <td></td>
   </tr>
 </table>
 
@@ -1430,9 +1431,9 @@ crossorigin=""/>
             <th>Spécifications</th>
         </tr>
         <tr>
-            <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-            <td width="10%">88&#8209;29&#8209;9</td>
-            <td width="50%"></td> 
+            <td style="width:40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+            <td style="width:10%">88&#8209;29&#8209;9</td>
+            <td style="width:50%"></td> 
         </tr>
         <tr>
             <td><span></span>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
