--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1406,9 +1406,9 @@ crossorigin=""/>
 
 <table style="width:100%">
   <tr>
-    <th>Month</th>
-    <th>Savings</th>
-    <th>Savings</th>
+    <th>Ingredient</th>
+    <th>N° CAS</th>
+    <th>Spécifications</th>
   </tr>
   <tr>
     <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
@@ -1416,9 +1416,9 @@ crossorigin=""/>
     <td width="50%"></td>
   </tr>
   <tr>
-    <td>February</td>
-    <td>$80</td>
-    <td></td>
+     <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
+     <td>13706&#8209;86&#8209;0</td>
+     <td></td> 
   </tr>
 </table>
 
@@ -1436,9 +1436,9 @@ crossorigin=""/>
             <td style="width:50%"></td> 
         </tr>
         <tr>
-            <td><span></span>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
-            <td><span></span>13706&#8209;86&#8209;0</td>
-            <td><span></span></td> 
+            <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
+            <td>13706&#8209;86&#8209;0</td>
+            <td></td> 
         </tr>
         <tr>
             <td><span></span>Alantroot oil (Elecampane oil)</td>
