--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1404,7 +1404,7 @@ crossorigin=""/>
     <p class="mt-5" lang="fr">Une partie du travail de l’association est également d’interdire l’utilisation d’ingrédients dangereux pour le consommateur. Ne pouvant donc pas les insérer dans notre classification, nous vous présentons la liste de ces substances ci-dessous : </p>
     <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
-<table style="width:100%">
+<table class="table-striped col-12" style="width:100%">
   <tr>
     <th>Ingredient</th>
     <th>N° CAS</th>
@@ -1422,7 +1422,7 @@ crossorigin=""/>
   </tr>
 </table>
 
-<div class="table-striped col-12" style="width:100%">
+<div  style="width:100%">
   <table class="col-12 align-items-center" >
    <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
         <tr>
