--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1405,35 +1405,61 @@ crossorigin=""/>
     <p class="mt-5" lang="en">Part of the association's work is also to ban the use of ingredients that are dangerous for the consumer. Therefore, since they cannot be included in our classification, we present the list of these substances below:</p>
 
 <table class="table-striped col-12 align-items-center" style="width:100%">
-  <tr>
-    <th>Ingredient</th>
-    <th>N° CAS</th>
-    <th>Spécifications</th>
-  </tr>
-  <tr>
-    <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-    <td width="10%">88&#8209;29&#8209;9</td>
-    <td width="50%"></td>
-  </tr>
-  <tr>
-     <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
-     <td>13706&#8209;86&#8209;0</td>
-     <td></td> 
-  </tr>
+  <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
+        <tr>
+          <th>Ingredient</th>
+          <th>N° CAS</th>
+          <th>Spécifications</th>
+        </tr>
+        <tr>
+          <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+          <td width="10%">88&#8209;29&#8209;9</td>
+          <td width="50%"></td>
+        </tr>
+        <tr>
+           <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
+           <td>13706&#8209;86&#8209;0</td>
+           <td></td> 
+        </tr>
+        <tr>
+            <td>Alantroot oil (Elecampane oil)</td>
+            <td>97676&#8209;35&#8209;2</td>
+            <td></td> 
+        </tr>
+        <tr>
+            <td>Allyl heptine carbonate</td>
+            <td>73157&#8209;43-4</td>
+            <td></td> 
+        </tr>
+        <tr>
+            <td>Allyl isothiocyanate</td>
+            <td>57&#8209;06&#8209;7</td>
+            <td><span></span></td> 
+        </tr>
+        <tr>
+            <td>Amylcyclopentenone</td>
+            <td>25564&#8209;22&#8209;1</td>
+            <td></td> 
+        </tr>
+        <tr>
+            <td>Anisylidene acetone (4-(p-methoxyphenyl)-3-butene-2-one)</td>
+            <td>943&#8209;88&#8209;4</td>
+            <td></td> 
+        </tr>  
 </table>
 
 <div  style="width:100%">
   <table class="col-12 align-items-center" >
-   <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
+   
         <tr>
             <th>Ingredient</th>
             <th>N° CAS</th>
             <th>Spécifications</th>
         </tr>
         <tr>
-            <td style="width:40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-            <td style="width:10%">88&#8209;29&#8209;9</td>
-            <td style="width:50%"></td> 
+            <td>Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+            <td>88&#8209;29&#8209;9</td>
+            <td></td> 
         </tr>
         <tr>
             <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
@@ -1441,29 +1467,29 @@ crossorigin=""/>
             <td></td> 
         </tr>
         <tr>
-            <td><span></span>Alantroot oil (Elecampane oil)</td>
-            <td><span></span>97676&#8209;35&#8209;2</td>
+            <td>Alantroot oil (Elecampane oil)</td>
+            <td>97676&#8209;35&#8209;2</td>
+            <td></td> 
+        </tr>
+        <tr>
+            <td>Allyl heptine carbonate</td>
+            <td>73157&#8209;43-4</td>
+            <td></td> 
+        </tr>
+        <tr>
+            <td>Allyl isothiocyanate</td>
+            <td>57&#8209;06&#8209;7</td>
             <td><span></span></td> 
         </tr>
         <tr>
-            <td><span></span>Allyl heptine carbonate</td>
-            <td><span></span>73157&#8209;43-4</td>
-            <td><span></span></td> 
+            <td>Amylcyclopentenone</td>
+            <td>25564&#8209;22&#8209;1</td>
+            <td></td> 
         </tr>
         <tr>
-            <td><span></span>Allyl isothiocyanate</td>
-            <td><span></span>57&#8209;06&#8209;7</td>
-            <td><span></span></td> 
-        </tr>
-        <tr>
-            <td><span></span>Amylcyclopentenone</td>
-            <td><span></span>25564&#8209;22&#8209;1</td>
-            <td><span></span></td> 
-        </tr>
-        <tr>
-            <td><span></span>Anisylidene acetone (4-(p-methoxyphenyl)-3-butene-2-one)</td>
-            <td><span></span>943&#8209;88&#8209;4</td>
-            <td><span></span></td> 
+            <td>Anisylidene acetone (4-(p-methoxyphenyl)-3-butene-2-one)</td>
+            <td>943&#8209;88&#8209;4</td>
+            <td></td> 
         </tr>
         <tr>
             <td><span></span>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
