--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1406,21 +1406,21 @@ crossorigin=""/>
 
 <table class="table-striped col-12 align-items-center" style="width:100%">
   <caption class="caption"><span lang="fr">Liste des produits interdits d'utilisation par l'IFRA</span><span lang="en">List of products prohibited for use by IFRA</span></caption> 
-        <tr>
-          <th>Ingredient</th>
-          <th>N° CAS</th>
-          <th>Spécifications</th>
-        </tr>
-        <tr>
-          <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
-          <td width="10%">88&#8209;29&#8209;9</td>
-          <td width="50%"></td>
-        </tr>
-        <tr>
-           <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
-           <td>13706&#8209;86&#8209;0</td>
-           <td></td> 
-        </tr>
+  <tr>
+    <th>Ingredient</th>
+    <th>N° CAS</th>
+    <th>Spécifications</th>
+  </tr>
+  <tr>
+    <td width="40%">Acetyl ethyl tetramethyl tetralin (AETT, Versalide)</td>
+    <td width="10%">88&#8209;29&#8209;9</td>
+    <td width="50%"></td>
+  </tr>
+  <tr>
+     <td>Acetyl isovaleryl (5-Methyl-2,3-hexanedione)</td>
+     <td>13706&#8209;86&#8209;0</td>
+     <td></td> 
+  </tr>
         <tr>
             <td>Alantroot oil (Elecampane oil)</td>
             <td>97676&#8209;35&#8209;2</td>
@@ -1445,380 +1445,7 @@ crossorigin=""/>
             <td>Anisylidene acetone (4-(p-methoxyphenyl)-3-butene-2-one)</td>
             <td>943&#8209;88&#8209;4</td>
             <td></td> 
-        </tr> 
-        <tr>
-            <td>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
-            <td>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
-            <td>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
-        </tr>
-        <tr>
-            <td>Benzene</td>
-            <td>71&#8209;43&#8209;2</td>
-            <td>The level of benzene has to be kept as low as practicable and should never exceed 1ppm in the fragrance compound.</td> 
-        </tr>
-         <tr>
-            <td>>Benzyl cyanide</td>
-            <td>>140&#8209;29&#8209;4</td>
-            <td>>On the basis of established maximum levels of this substance in commercially available natural sources (like essential oils and extracts), exposure to this substance from the use of these oils and extracts is not significant and the use of these oils authorized as long as the level of benzyl cyanide in the finished product does not exceed 100ppm.</td> 
-        </tr>
-        <tr>
-            <td>>Benzylidene acetone (4-Phenyl-3-buten-2-one)</td>
-            <td>>122&#8209;57&#8209;6</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Birch wood pyrolysate (Crude)</td>
-            <td>>8001&#8209;88&#8209;5 <br>84012&#8209;15&#8209;7<br>85940&#8209;29&#8209;0<br>68917&#8209;50&#8209;0</td>
-            <td>>The rectified (purified) birch tar oils can be used insofar the below requirement is respected:<br>
-            Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use of rectified oils according to Good Manufacturing Practice.<br>
-            Benzopyrene and 1,2-Benzanthracene are to be used as markers for PAH. If used alone or in combination with rectified Cade oil, rectified Styrax oil or rectified Opoponax oil, the total concentration of both of the markers should not exceed 1 ppb in the final product.</td> 
-        </tr>
-        <tr>
-            <td>>Boldo oil</td>
-            <td>>8022&#8209;81&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>3-Bromo-1,7,7-trimethylbicyclo[2.2.1]heptane-2-one</td>
-            <td>>76&#8209;29&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Bromostyrene</td>
-            <td>>103&#8209;64&#8209;0</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>p-tert-Butylphenol</td>
-            <td>>98&#8209;54&#8209;4</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Cade oil - Juniperus oxycedrus L. (Crude)</td>
-            <td>>8013&#8209;10&#8209;3<br>90046&#8209;02&#8209;9</td>
-            <td>>The rectified (purified) cade oils can be used insofar the below requirement is respected:<br>
-Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use of rectified oils according to Good Manufacturing Practice.<br>Benzopyrene and 1,2-Benzanthracene are to be used as markers for PAH. If used alone or in combination with rectified Birch tar oils, rectified Opoponax oil or rectified Styrax oil, the total concentration of both of the markers should not exceed 1 ppb in the final product.</td> 
-        </tr>
-        <tr>
-            <td>>Carvone oxide</td>
-            <td>>33204&#8209;74&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Chenopodium oil</td>
-            <td>>8006&#8209;99&#8209;3</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Cinnamylidene acetone</td>
-            <td>>4173&#8209;44&#8209;8</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Colophony</td>
-            <td>>8050&#8209;09&#8209;7</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Costus root oil, absolute and concrete</td>
-            <td>>8023&#8209;88&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Cyclamen alcohol (3-(4-Isopropylphenyl)-2-methylpropanol)</td>
-            <td>>4756&#8209;19&#8209;8</td>
-            <td>>Cyclamen alcohol should not be used as a fragrance ingredient as such, but to accept a level of up to 1,5% in cyclamen aldehyde.</td> 
-        </tr>
-        <tr>
-            <td>>1,3-Dibromo-2-methoxy-4-nitro-5-(1,1-dimethylethyl)-6-methyl-benzene (Musk alpha)</td>
-            <td>>63697&#8209;53&#8209;0</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>1,3-Dibromo-2-methoxy-4-methyl-5-nitrobenzene (Musk KS)</td>
-            <td>>62265&#8209;99&#8209;0</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>2,2-Dichloro-1-methylcyclopropylbenzene</td>
-            <td>>3591&#8209;42&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>2,4-Dienals</td>
-            <td>>764&#8209;40&#8209;9<br>
- 142&#8209;83&#8209;6<br>80466&#8209;34&#8209;8<br>5910&#8209;85&#8209;0<br>30361&#8209;28&#8209;5<br>6750&#8209;03&#8209;4<br>2363&#8209;88&#8209;4<br>13162&#8209;46&#8209;4<br>21662&#8209;16&#8209;8<br>25152&#8209;84&#8209;5<br>30361&#8209;29&#8209;6<br>4313&#8209;03&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Diethyl maleate</td>
-            <td>>141&#8209;05&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>2,4-Dihydroxy-3-methylbenzaldehyde</td>
-            <td>>6248&#8209;20&#8209;0</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>4,6-Dimethyl-8-tert-butylcoumarin (Butolia)</td>
-            <td>>17874&#8209;34&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>3,7-Dimethyl-2-octen-1-ol</td>
-            <td>>40607&#8209;48&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Dimethyl citraconate</td>
-            <td>>617&#8209;54&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Diphenylamine</td>
-            <td>>122&#8209;39&#8209;4</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>2,4-Dodecadien-1-ol</td>
-            <td>>18485&#8209;38&#8209;6</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Esters of 2-octynoic acid (Except Methyl heptine carbonate which is IFRA Restricted)</td>
-            <td>>10484&#8209;32&#8209;9<br>10519&#8209;20&#8209;7</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Esters of 2-nonynoic acid, (Except Methyl octine carbonate)</td>
-            <td>>10031&#8209;92&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Ethyl acrylate</td>
-            <td>>140&#8209;88&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Ethylene glycol monoethyl ether and its Acetate</td>
-            <td>>110&#8209;80&#8209;5<br>111&#8209;15&#8209;9<br>(acetate)</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Ethylene glycol monomethyl ether and its Acetate</td>
-            <td>>109&#8209;86&#8209;4<br>110&#8209;49&#8209;6<br>(acetate)</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Fig leaf absolute</td>
-            <td>>68916&#8209;52&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Furfuryl alcohol</td>
-            <td>>98&#8209;00&#8209;0</td>
-            <td>>Contributions from other sources like Coffee extracts or certain types of Cade oil have been evaluated. On the basis of the established maximum level of Furfuryl alcohol in these commercially available natural sources, exposure to this substance from the use of these oils and extracts is not significant and not regarded of concern from a consumer safety point of view.<br>See also the note on contributions from other sources in the Introduction to the IFRA Standards.</td> 
-        </tr>
-        <tr>
-            <td>>Furfurylidene acetone</td>
-            <td>>623&#8209;15&#8209;4</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Geranyl nitrile</td>
-            <td>>5146&#8209;66&#8209;7<br>5585&#8209;39&#8209;7<br>31983&#8209;27&#8209;4<br></td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>trans-2-Heptenal</td>
-            <td>>18829&#8209;55&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>2,4-Hexadien-1-ol</td>
-            <td>>111&#8209;28&#8209;4<br>17102&#8209;64&#8209;6</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Hexahydrocoumarin</td>
-            <td>>700&#8209;82&#8209;3</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>trans-2-Hexenal diethyl acetal</td>
-            <td>>67746&#8209;30&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>trans-2-Hexenal dimethyl acetal</td>
-            <td>>18318&#8209;83&#8209;7</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Hydroabietyl alcohol, dihydroabietyl alcohol</td>
-            <td>>13393&#8209;93&#8209;6<br>26266&#8209;77&#8209;3<br>1333&#8209;89&#8209;7</td>
-        </tr>
-        <tr>
-            <td>>Hydroquinone monoethyl ether (4-ethoxy-Phenol)</td>
-            <td>>622&#8209;62&#8209;8</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Hydroquinone monomethyl ether (4-methoxy-Phenol)</td>
-            <td>>150&#8209;76&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Isophorone</td>
-            <td>>78&#8209;59&#8209;1</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>6-Isopropyl-2-decalol (Decatol)</td>
-            <td>>34131&#8209;99&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Massoia bark oil</td>
-            <td>>85085&#8209;26&#8209;3</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Massoia lactone</td>
-            <td>>54814&#8209;64&#8209;1<br>51154&#8209;96&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>7-Methoxycoumarin</td>
-            <td>>531&#8209;59&#8209;9</td>
-            <td>>The material as such should not be used as a fragrance ingredient for any application.On the basis of established maximum levels of this substance in commercially available natural sources (like essential oils, extracts and absolutes), exposure to this substance from the use of these oils and extracts is regarded acceptable as long as the level of 7-methoxycoumarin in the finished product does not exceed 100ppm.</td> 
-        </tr>
-        <tr>
-            <td>>alpha-Methyl anisylidene acetone (1-(4-Methoxyphenyl)-1-penten-3-one)</td>
-            <td>>104&#8209;27&#8209;8</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>6-Methylcoumarin (Toncarine)</td>
-            <td>>92&#8209;48&#8209;8</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>7-Methylcoumarin</td>
-            <td>>2445&#8209;83&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>4-Methyl-7-ethoxycoumarin (Maraniol)</td>
-            <td>>87&#8209;05&#8209;8</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>p-Methylhydrocinnamic aldehyde</td>
-            <td>>5406&#8209;12&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Methyl methacrylate </td>
-            <td>>80&#8209;62&#8209;6</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>3-Methyl-2(3)-nonenenitrile (Citgrenile)</td>
-            <td>>53153&#8209;66&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Moskene (1,1,3,3,5-Pentamethyl-4,6-dinitroindane)</td>
-            <td>>116&#8209;66&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Musk ambrette</td>
-            <td>>83&#8209;66&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Musk tibetene (1-tert-Butyl-2,6-dinitro-3,4,5-trimethylbenzene)</td>
-            <td>>145&#8209;39&#8209;1</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Musk Xylene</td>
-            <td>>81&#8209;15&#8209;2</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Nitrobenzene</td>
-            <td>>98&#8209;95&#8209;3</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>2-Pentylidene cyclohexanone</td>
-            <td>>25677&#8209;40&#8209;1</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Peru balsam crude </td>
-            <td>>8007&#8209;00&#8209;9</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Phenyl acetone (Methyl benzyl ketone)</td>
-            <td>>103&#8209;79&#8209;7</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Phenyl benzoate</td>
-            <td>>93&#8209;99&#8209;2</td>
-        </tr>
-                <tr>
-            <td>>Pseudoionone (2,6-Dimethylundeca-2,6,8-trien-10-one)</td>
-            <td>>141&#8209;10&#8209;6</td>
-            <td>>Pseudoionone should not be used as fragrance ingredient as such, but a level of up to 2% as an impurity in ionones is accepted.</td> 
-        </tr>
-        <tr>
-            <td>>Pseudo Methylionones</td>
-            <td>>26651&#8209;96&#8209;7<br>72968&#8209;25&#8209;3<br>1117&#8209;41&#8209;5</td>
-            <td>>Pseudo methylionone should not be used as fragrance ingredient as such, but a level of up to 2% as an impurity in methylionones is accepted.</td> 
-        </tr>
-        <tr>
-            <td>>Quinoline</td>
-            <td>>91&#8209;22&#8209;5</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Safrole, Isosafrole, Dihydrosafrole</td>
-            <td>>94&#8209;59&#8209;7</td>
-            <td>>Safrole as such should not be used as a fragrance ingredient; essential oils containing safrole should not be used at a level such that the total concentration of safrole exceeds 0,01% in the finished product. The total concentration of safrole, isosafrole and dihydrosafrole should not exceed 0,01% in the finished product.</td> 
-        </tr>
-        <tr>
-            <td>>Santolina oil</td>
-            <td>>84961&#8209;58&#8209;0</td>
-            <td>></td> 
-        </tr>
-        <tr>
-            <td>>Savin oil (Juniperus Sabina L.)</td>
-            <td>>8024&#8209;00&#8209;8</td>
-            <td>>Savin oil should not be used as a fragrance ingredient if prepared from Juniperus Sabina L. Only oils obtained from Juniperus phoenicea L. should be used.</td> 
-        </tr>
-        <tr>
-            <td>>Styrax (Crude)</td>
-            <td>>8024&#8209;01&#8209;9<br>8046&#8209;19&#8209;3</td>
-            <td>>Crude gums of American and Asian styrax should not be used as fragrance ingredients. Only extracts or distillates (resinoids, absolutes and oils), prepared from exudations of Liquidambar styraciflua L. var. macrophylla or Liquidambar orientalis Mill., can be used and should not exceed a level of 0.6% in the finished product.</td> 
-        </tr>
-        <tr>
-            <td>>Toluene</td>
-            <td>>108&#8209;88&#8209;3</td>
-            <td>>The level of toluene has to be kept as low as practicable and should never exceed 100ppm in the fragrance compound.</td> 
-        </tr>
-        <tr>
-            <td>>Verbena oil</td>
-            <td>>8024&#8209;12&#8209;2</td>
-            <td>></td> 
-        </tr>
- 
+        </tr>  
 </table>
 
 <div  style="width:100%">
@@ -1865,14 +1492,14 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
             <td></td> 
         </tr>
         <tr>
-            <td>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
-            <td>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
-            <td>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
+            <td><span></span>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
+            <td><span></span>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
+            <td><span></span>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
         </tr>
         <tr>
-            <td>Benzene</td>
-            <td>71&#8209;43&#8209;2</td>
-            <td>The level of benzene has to be kept as low as practicable and should never exceed 1ppm in the fragrance compound.</td> 
+            <td><span></span>Benzene</td>
+            <td><span></span>71&#8209;43&#8209;2</td>
+            <td><span></span>The level of benzene has to be kept as low as practicable and should never exceed 1ppm in the fragrance compound.</td> 
         </tr>
          <tr>
             <td><span></span>Benzyl cyanide</td>
