--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1445,7 +1445,12 @@ crossorigin=""/>
             <td>Anisylidene acetone (4-(p-methoxyphenyl)-3-butene-2-one)</td>
             <td>943&#8209;88&#8209;4</td>
             <td></td> 
-        </tr>  
+        </tr> 
+        <tr>
+            <td>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
+            <td>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
+            <td>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
+        </tr> 
 </table>
 
 <div  style="width:100%">
@@ -1492,9 +1497,9 @@ crossorigin=""/>
             <td></td> 
         </tr>
         <tr>
-            <td><span></span>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
-            <td><span></span>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
-            <td><span></span>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
+            <td>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
+            <td>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
+            <td>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
         </tr>
         <tr>
             <td><span></span>Benzene</td>
