--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -1447,8 +1447,8 @@ crossorigin=""/>
             <td></td> 
         </tr> 
         <tr>
-            <td>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
-            <td>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
+            <td>cis and trans Asarone ((E) and(Z) 2,4,5 Trimethoxypropen-1-yl benzene)</td>
+            <td>2883-98-9 <br> 5273-86-9</td>
             <td>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
         </tr> 
 </table>
