--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -412,6 +412,7 @@ crossorigin=""/>
     <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
     <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
     <li>MORVAN Axel<i class="profession"><span lang="fr">(Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
+    <li>MURATORE Agnès<i class="profession"><span lang="fr"> (Ingénieure chimiste senior, consultante technique et scientifique)</span><span lang="en"> (Senior Research Chemist, Scientific and Technical consultant)</span></i></li>
     <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
     <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
     <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
