--- a/html/_/pre_index.html
+++ b/html/_/pre_index.html
@@ -411,9 +411,9 @@ crossorigin=""/>
     <li>DHORME Morgan<i class="profession"><span lang="fr"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en"> (Perfumer at Chidho Cosmétiques)</span></i></li>
     <li>DURIEZ Jean-Michel<i class="profession"><span lang="fr"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></i></li>
     <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
-    <li>MORVAN Axel<i class="profession"><span lang="fr">(Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
+    <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
     <li>MURATORE Agnès<i class="profession"><span lang="fr"> (Ingénieure chimiste senior, consultante technique et scientifique)</span><span lang="en"> (Senior Research Chemist, Scientific and Technical consultant)</span></i></li>
-    <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li>
+    <li>PROIA Stéphane<i class="profession"><span lang="fr"> (Evaluateur Junior)</span><span lang="en"> (Junior Evaluator)</span></i></li> 
     <li>RAYNAL Sabine<i class="profession"><span lang="fr"> (Enseignante à l’ISIPCA)</span><span lang="en"> (Teacher at ISIPCA)</span></i></li>
     <li>REVILLARD Patrice<i class="profession"><span lang="fr"> (Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Co-Founder and Perfumer at MAELSTROM Parfumeurs)</span></i></li>
     <li>VILLEPREUX Céline<i class="profession"><span lang="fr"> (Experte Matières Premières – Firmenich)</span><span lang="en"> (Raw Materials Expert at Firmenich)</span></i></li>
@@ -624,8 +624,8 @@ crossorigin=""/>
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-lg-4  panelcontent" >
   
-  <p><h2 class="item d-inline text-size-16px"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></h2>
-  <span id="modalbody-tenue" class="textitem" ></span></span></p>
+  <h2 class="item d-inline text-size-16px"><span><b lang="fr">Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><b lang="en">Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></h2>
+  <span id="modalbody-tenue" class="textitem" ></span></span>
   
   <p><h2 class="item d-inline text-size-16px"><span><b lang="fr"> Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><b lang="en"> Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></h2>
   <span id="modalbody-price" class="textitem"></span></span></p>
